--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "engines": {
     "vscode": "^1.93.0"
   },
+  "publisher": "local",
   "categories": [
     "Other"
   ],
   "activationEvents": [
-    "onView:cpHelperView",
+    "onView:cp-helper.cpHelperView",
     "onCommand:cp-helper.createNewFile",
     "onCommand:cp-helper.createContest",
     "onCommand:cp-helper.markAsAC",
@@ -18,6 +19,24 @@
   ],
   "main": "./out/extension.js",
   "contributes": {
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "cp-helper",
+          "title": "CP Helper",
+          "icon": "resources/icon.png"
+        }
+      ]
+    },
+    "views": {
+      "cp-helper": [
+        {
+          "type": "webview",
+          "id": "cp-helper.cpHelperView",
+          "name": "CP Helper"
+        }
+      ]
+    },
     "menus": {
       "editor/title": [
         {
@@ -49,24 +68,7 @@
         "command": "cp-helper.markAsWA",
         "title": "Mark as WA"
       }
-    ],
-    "viewsContainers": {
-      "activitybar": [
-        {
-          "id": "cp-helper",
-          "title": "CP Helper",
-          "icon": "resources/icon.png"
-        }
-      ]
-    },
-    "views": {
-      "cp-helper": [
-        {
-          "id": "cpHelperView",
-          "name": "CP Helper"
-        }
-      ]
-    }
+    ]
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
