--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "engines": {
     "vscode": "^1.93.0"
   },
-  "publisher": "local",
+  "publisher": "retard",
   "categories": [
     "Other"
   ],
