--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "vscode": "^1.93.0"
   },
   "publisher": "retard",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aleksabolic/cp-helper"
+  },
   "categories": [
     "Other"
   ],
