--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "cp-helper",
-  "displayName": "competitve-programming-helper",
+  "displayName": "CP Helper",
   "description": "VS Code extension for competitive programming workflow",
+  "icon": "resources/logo.png",
   "version": "0.0.5",
   "engines": {
     "vscode": "^1.93.0"
   },
-  "publisher": "retard",
+  "publisher": "cp-helper",
   "repository": {
     "type": "git",
     "url": "https://github.com/aleksabolic/cp-helper"
