--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: '18'
 
       - name: Install dependencies
         run: npm install
 
       - name: Package Extension (.vsix)
-        run: npx vsce package
+        run: npx @vscode/vsce package
 
       - name: Create GitHub Release
         id: create_release
