--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: write  
+
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -25,8 +28,8 @@ jobs:
         run: npx @vscode/vsce package
 
       - name: Create GitHub Release
-        id: create_release
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ github.ref_name }}
-          assets: "*.vsix"
+          artifacts: "*.vsix"
+          token: ${{ secrets.GITHUB_TOKEN }}
